--- a/frontend/src/admin/adminusersstyle.module.css
+++ b/frontend/src/admin/adminusersstyle.module.css
@@ -3,7 +3,7 @@
   padding: 30px;
   flex: 1;
   max-width: 100%;
-  overflow-x: hidden;
+  overflow: visible;
 }
 
 .pageHeader {
